[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/entities/lasereffects/LaserEffects.gd" type="Script" id=1]
[ext_resource path="res://sounds/corrosion.mp3" type="AudioStream" id=2]
[ext_resource path="res://sounds/fire.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/ice.mp3" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.503876, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1, 0.458008, 0.458008, 0.458008, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 512

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 0.8
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, -2 )
initial_velocity = 0.5
color_ramp = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 0.552941, 0, 1 )
proximity_fade_enable = true
proximity_fade_distance = 1.0

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.025, 0.05 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.651163, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 0, 0.492188, 0.146118, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 512

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 0.8
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
color_ramp = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="PlaneMesh" id=10]
material = SubResource( 9 )
size = Vector2( 0.05, 0.05 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.23221, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0.499023, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 512

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 0.8
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
color_ramp = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=14]
flags_unshaded = true
albedo_color = Color( 0.0941176, 0.419608, 0.878431, 1 )

[sub_resource type="PlaneMesh" id=15]
material = SubResource( 14 )
size = Vector2( 0.05, 0.05 )

[node name="LaserEffects" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="BleedTimer" type="Timer" parent="."]

[node name="Fire" type="Particles" parent="."]
emitting = false
amount = 500
lifetime = 1.5
randomness = 0.2
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Corrosion" type="Particles" parent="."]
emitting = false
amount = 50
lifetime = 2.0
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="Ice" type="Particles" parent="."]
emitting = false
amount = 10
lifetime = 2.0
speed_scale = 0.5
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 15 )

[node name="IceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CorrosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BleedTimer" to="." method="_on_BleedTimer_timeout"]
